--- a/server.properties
+++ b/server.properties
@@ -1,10 +1,11 @@
 #Minecraft server properties
-#Wed Jul 18 14:45:46 EEST 2018
+#Thu Jul 19 15:27:45 EEST 2018
 spawn-protection=16
 generator-settings=
 force-gamemode=false
 allow-nether=true
 gamemode=0
+broadcast-console-to-ops=true
 enable-query=false
 player-idle-timeout=0
 difficulty=2
@@ -35,5 +36,5 @@ max-build-height=256
 level-seed=
 prevent-proxy-connections=false
 use-native-transport=true
-enable-rcon=false
 motd=A Minecraft Server
+enable-rcon=false
